sock_shop/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: capstone.teslim.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
